--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "@webpack-cli/generators": "^2.1.0",
     "autoprefixer": "^10.2.6",
+    "babel-eslint": "10.x",
     "chokidar": "^3.5.1",
     "css-loader": "^5.2.6",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "14.x",
+    "eslint-plugin-import": "2.x",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
@@ -16,6 +22,10 @@
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
+    "stylelint": "13.x",
+    "stylelint-config-standard": "21.x",
+    "stylelint-csstree-validator": "1.x",
+    "stylelint-scss": "3.x",
     "tailwindcss": "^2.1.2",
     "ts-loader": "^9.2.2",
     "typescript": "^4.3.2",
@@ -29,6 +39,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "eslint-ts": "eslint . --ext .ts",
+    "stylelint": "stylelint '**/*.{css,scss}'"
   }
 }
