--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "repository": "git@github.com:gscarv13/weather-app.git",
   "license": "MIT",
   "private": true,
+  "dependencies": {
+    "tailwindcss": "^2.1.3"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
@@ -26,7 +29,6 @@
     "stylelint-config-standard": "21.x",
     "stylelint-csstree-validator": "1.x",
     "stylelint-scss": "3.x",
-    "tailwindcss": "^2.1.2",
     "ts-loader": "^9.2.2",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
