Fix UI, Optimize CSS for production, Add ESlint config for Typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,24 @@
   },
   "ignorePatterns": [
     "dist/",
-    "build/"
+    "build/",
+    "node_modules"
+  ],
+  "overrides": [
+    {
+      "files": [
+        "*.ts"
+      ],
+      "plugins": [
+        "@typescript-eslint",
+        "@typescript-eslint/eslint-plugin"
+      ],
+      "extends": [
+        "standard",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended"
+      ],
+      "parser": "@typescript-eslint/parser"
+    }
   ]
 }
