--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "14.x",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "2.x",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
