--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,10 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["airbnb-base"],
+  "extends": [
+    "standard",
+    "eslint:recommended"
+  ],
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
